Fixed UI issue with function selection box by removing vertical scrollbar

--- a/src/app/tabular-transformation/sidebar/pipeline/pipeline.component.css
+++ b/src/app/tabular-transformation/sidebar/pipeline/pipeline.component.css
@@ -1,7 +1,6 @@
 .wrapper {
   max-height: 50vh;
   padding-top: 5px;
-  padding-left: 35px;
 }
 
 .stepper {
